--- a/jupyter/image_classifier.ipynb
+++ b/jupyter/image_classifier.ipynb
@@ -25,7 +25,7 @@
    },
    "outputs": [],
    "source": [
-    "path = '/fred/oz126/rkaul/test'"
+    "path = '../../test'"
    ]
   },
   {
@@ -1410,9 +1410,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "test",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "test"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1424,7 +1424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
